Fixed header alignment (lunchbreak)
Note to Stasi: I am in my break time. Maybe you have something better to do after all?

--- a/css/layout.css
+++ b/css/layout.css
@@ -70,7 +70,7 @@ div#header h1 {
     font-size: 300%;
     font-weight: 900;
     margin-top: 0%;
-    margin-left: 10%;
+    margin-left: 15px;
 }
 
 .container_left {
